[package]
name = "hyper-h1-client-spin"
version = "0.0.0"
edition = "2021"

[dependencies]
hyper = { version = "=1.10.0", features = ["client", "http1"] } # change to =1.9.0 to see it park
hyper-util = { version = "0.1", features = ["tokio"] }
http = "1"
bytes = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util", "sync", "time", "net"] }
